[gd_scene load_steps=4 format=3 uid="uid://cakgbvloua2ll"]

[ext_resource type="Theme" uid="uid://c501q1j77skrq" path="res://game_logic/minigames/base_minigame/minigame_theme.tres" id="1_5xwyy"]
[ext_resource type="Script" path="res://game_logic/minigames/base_minigame/minigame_constructor.gd" id="3_6vxdm"]
[ext_resource type="Texture2D" uid="uid://dqy0ovlfbgua5" path="res://game_logic/minigames/base_minigame/minigame_icon_small.svg" id="3_q83lf"]

[node name="MinigameConstructor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5xwyy")
script = ExtResource("3_6vxdm")

[node name="AutoHackActivateSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="MainContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 256.0
offset_bottom = 310.0

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MinigameComponents" type="VBoxContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2

[node name="PromptText" type="Label" parent="MainContainer/MarginContainer/MinigameComponents"]
unique_name_in_owner = true
layout_mode = 2
text = "This is a prompt!"

[node name="PromptSeparator" type="HSeparator" parent="MainContainer/MarginContainer/MinigameComponents"]
layout_mode = 2

[node name="MinigameContainer" type="Control" parent="MainContainer/MarginContainer/MinigameComponents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="AutohackSeparator" type="HSeparator" parent="MainContainer/MarginContainer/MinigameComponents"]
layout_mode = 2

[node name="AutoHack" type="Button" parent="MainContainer/MarginContainer/MinigameComponents"]
unique_name_in_owner = true
layout_mode = 2
text = "Preparing Autohack..."

[node name="AutoHackProgress" type="ProgressBar" parent="MainContainer/MarginContainer/MinigameComponents"]
unique_name_in_owner = true
layout_mode = 2
value = 50.0
show_percentage = false

[node name="MinigameIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 90.0
offset_top = 120.0
offset_right = 226.0
offset_bottom = 226.0
texture = ExtResource("3_q83lf")
